# YWProject

./: ._YW.xcworkspace  .gitignore  CMakeLists.txt  LICENSE  README.md
App/: ._README.md  README.md
Demos/: ._YW.xcodeproj
Demos/YW.xcodeproj/: project.pbxproj
Demos/YW.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Demos/YW.xcodeproj/project.xcworkspace/xcuserdata/york.xcuserdatad/: UserInterfaceState.xcuserstate
Demos/YW.xcodeproj/xcuserdata/york.xcuserdatad/xcschemes/: YW.xcscheme  xcschememanagement.plist
Demos/YWSwift/: main.cpp
Demos/YWTest/: ._main.cpp  main.cpp
Demos/android/: main.cpp
Demos/iOS/YWSwiftDemo/YWSwiftDemo/: AppDelegate.swift  DemoMathUtils.swift  DemoMetalView.swift  DemoShader.metal  ViewController.swift
Demos/iOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/: project.pbxproj
Demos/iOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/xcshareddata/xcschemes/: YWSwiftDemo.xcscheme
Demos/iOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/xcuserdata/york.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Demos/iOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/xcuserdata/york.xcuserdatad/xcschemes/: xcschememanagement.plist
Demos/iOS/YWSwiftDemo/YWSwiftDemo/Base.lproj/: Main.storyboard
Demos/macOS/YWSwiftDemo/YWSwiftDemo/: AppDelegate.swift  DemoMathUtils.swift  DemoMetalView.swift  DemoShader.metal  Info.plist  ViewController.swift
Demos/macOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/: project.pbxproj
Demos/macOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Demos/macOS/YWSwiftDemo/YWSwiftDemo.xcodeproj/xcuserdata/york.xcuserdatad/xcschemes/: xcschememanagement.plist
Demos/macOS/YWSwiftDemo/YWSwiftDemo/Base.lproj/: Main.storyboard
Libs/: ._YWFoundation.xcodeproj  ._YWMath.xcodeproj  ._YWPhy.xcodeproj
Libs/YWFoundation/: ._Matrix.h  ._Quaternion.h  ._Task.cpp  ._Task.h  ._Transform.h  ._Vector.h  Matrix.h  Quaternion.h  Task.cpp  Task.h  Transform.h  Vector.h
Libs/YWFoundation.xcodeproj/: project.pbxproj
Libs/YWFoundation.xcodeproj/xcuserdata/york.xcuserdatad/xcschemes/: xcschememanagement.plist
Libs/YWMath/: ._Matrix.h  ._Quaternion.h  ._Transform.h  ._Vector.h  Matrix.h  Quaternion.h  Transform.h  Vector.h
Libs/YWMath.xcodeproj/: project.pbxproj
Libs/YWMath.xcodeproj/xcuserdata/york.xcuserdatad/xcschemes/: xcschememanagement.plist
Libs/YWPhy/: ._YWParticle.cpp  ._YWParticle.h  ._YWPhyWorld.h  YWParticle.cpp  YWParticle.h  YWPhy.cpp  YWPhy.h  YWPhyPriv.h
Libs/YWPhy.xcodeproj/: project.pbxproj
Libs/YWPhy.xcodeproj/xcuserdata/york.xcuserdatad/xcschemes/: xcschememanagement.plist
Libs/YWRender/: YWRender.cpp  YWRender.h
Src/Demos/: main.cpp
Src/YWPhy/: YWPhy.cpp  YWPhy.hpp  YWPhyPriv.hpp
YW.xcworkspace/: contents.xcworkspacedata
YW.xcworkspace/xcuserdata/york.xcuserdatad/: UserInterfaceState.xcuserstate
YWProject/YWMath/: YWMath.vcxproj
YWProject/YWTest/: YWTest.vcxproj.filters
YWProjectVS/: YWProject.sln
YWProjectVS/YWMath/: YWMath.vcxproj.filters
YWProjectVS/YWPhy/: YWPhy.vcxproj  YWPhy.vcxproj.filters
YWProjectVS/YWTest/: YWTest.vcxproj
app/: CMakeLists.txt
demos/: ._CMakeLists.txt  CMakeLists.txt
demos/YWHelloWorld/: ._main.cpp  main.cpp
libs/: ._CMakeLists.txt  CMakeLists.txt
libs/YWPhysics/: ._YWParticle.cpp  ._YWParticle.h  ._YWPhyWorld.h  YWParticle.cpp  YWPhyWorld.h
scripts/: ._README.md  README.md
thirdsdk/: README.md
thirdsdk/vulkan/mac/lib/: libSPIRV-Tools-shared.dylib
thirdsdk/vulkan/mac/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc
