
aux_source_directory(./YWTest YW_TEST_DEMO)
add_executable (YWVulkanDemo ${YW_TEST_DEMO})
target_link_libraries(YWVulkanDemo YWFoundation)
target_link_libraries(YWVulkanDemo YWPhysics)
target_link_libraries(YWVulkanDemo glfw)
target_link_libraries(YWVulkanDemo libvulkan.dylib)

aux_source_directory(./YWHelloWorld YW_HELLOWORLD_DEMO)
add_executable (YWHelloGLDemo ${YW_HELLOWORLD_DEMO})
target_link_libraries(YWHelloGLDemo YWFoundation)
target_link_libraries(YWHelloGLDemo YWPhysics)
target_link_libraries(YWHelloGLDemo glfw)
find_package(OpenGL REQUIRED)
include_directories(YWHelloGLDemo ${OPENGL_INCLUDE_DIR})
target_link_libraries(YWHelloGLDemo ${OPENGL_gl_LIBRARY})